fixing docker compose for local usage

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,49 +1,51 @@
 services:
-
-  wedapp:
+  weddapp:
     image: epinux/wedapp:latest
     build:
       context: ./docker/ui
     environment:
-      BOKEH_ALLOW_WS_ORIGIN: '0.0.0.0:7000,192.168.0.13:7000,localhost:7000'
+      BOKEH_ALLOW_WS_ORIGIN: '0.0.0.0:7000,192.168.0.13:7000,localhost:7000,weddapp.epinux.com,epinux.com:7000,5.161.186.233:7000'
       PORT: '7000'
       LOG_LEVEL: 'debug'
       BOKEH_LOG_LEVEL: 'debug'
       PYTHONUNBUFFERED: 1
-    # networks:
-    #   - net
-    #   - traefik-public
-    # deploy:
-    #   resources:
-    #     #  limits:
-    #     #  cpus: '0.50'
-    #     #  memory: 4096M
-    #     reservations:
-    #       cpus: '0.25'
-    #       memory: 512M
-    #   placement:
-    #     constraints:
-    #       - node.role == manager
-    #   labels:
-    #     - traefik.enable=true
-    #     - traefik.docker.network=traefik-public
-    #     - traefik.constraint-label=traefik-public
-    #     - traefik.http.routers.ncprocess-http.rule=Host(`${UI_DOMAIN?Variable not set}`)
-    #     - traefik.http.routers.ncprocess-http.entrypoints=http
-    #     - traefik.http.routers.ncprocess-http.middlewares=https-redirect
-    #     - traefik.http.routers.ncprocess-https.rule=Host(`${UI_DOMAIN?Variable not set}`)
-    #     - traefik.http.routers.ncprocess-https.entrypoints=https
-    #     - traefik.http.routers.ncprocess-https.tls=true
-    #     - traefik.http.routers.ncprocess-https.tls.certresolver=le
-    #     - traefik.http.services.ncprocess.loadbalancer.server.port=7000
-    #     # allow CORS
-    #     - "traefik.http.middlewares.testheader.headers.accesscontrolallowmethods=GET,OPTIONS,PUT"
-    #     - "traefik.http.middlewares.testheader.headers.accesscontrolalloworiginlist=*"
-    #     - "traefik.http.middlewares.testheader.headers.accesscontrolmaxage=100"
-    #     - "traefik.http.middlewares.testheader.headers.addvaryheader=true"
+      DOMAIN: weddapp.epinux.com
+    networks:
+      - net
+      - traefik-public
+    deploy:
+      resources:
+        #  limits:
+        #  cpus: '0.50'
+        #  memory: 4096M
+        reservations:
+          cpus: '0.25'
+          memory: 512M
+      placement:
+        constraints:
+          - node.role == manager
+      labels:
+        - traefik.enable=true
+        - traefik.docker.network=traefik-public
+        - traefik.constraint-label=traefik-public
+        # - traefik.http.routers.weddapp-http.rule=Host(`${DOMAIN?Variable not set}`)
+        - traefik.http.routers.weddapp-http.rule="weddapp.epinux.com"
+        - traefik.http.routers.weddapp-http.entrypoints=http
+        - traefik.http.routers.weddapp-http.middlewares=https-redirect
+        # - traefik.http.routers.weddapp-https.rule=Host(`${DOMAIN?Variable not set}`)
+        - traefik.http.routers.weddapp-https.rule="weddapp.epinux.com"
+        - traefik.http.routers.weddapp-https.entrypoints=https
+        - traefik.http.routers.weddapp-https.tls=true
+        - traefik.http.routers.weddapp-https.tls.certresolver=le
+        - traefik.http.services.weddapp.loadbalancer.server.port=7000
+        # allow CORS
+        - "traefik.http.middlewares.testheader.headers.accesscontrolallowmethods=GET,OPTIONS,PUT"
+        - "traefik.http.middlewares.testheader.headers.accesscontrolalloworiginlist=*"
+        - "traefik.http.middlewares.testheader.headers.accesscontrolmaxage=100"
+        - "traefik.http.middlewares.testheader.headers.addvaryheader=true"
     ports:
       - 7000:7000
-    hostname: wedapp
+    hostname: weddapp
     volumes:
       - ./docker/ui/app:/app
       - ./docker/ui/entrypoint.sh:/entrypoint.sh
@@ -62,14 +64,19 @@ services:
       POSTGRES_DB: mydatabase
     volumes:
       - db_data:/var/lib/postgresql/data
+    networks:
+      - net
+
+
+
 
 
 volumes:
   db_data:
 
-# networks:
-#   net:
-#     driver: overlay
-#     attachable: true
-#   traefik-public:
-#     external: true
+networks:
+  net:
+    driver: overlay
+    attachable: true
+  traefik-public:
+    external: true
